gpu/vectordev.h

int getMultiVecDeviceSize(void* deviceVec);
int getMultiVecDeviceCount(void* deviceVec);
int nrm2MultiVecDeviceFloat(float* y_res, int n, void* devVecA);
int nrm2MultiVecDeviceDouble(double* y_res, int n, void* devVecA);
int nrm2MultiVecDeviceFloatComplex(float* y_res, int n, void* devMultiVecA);
int nrm2MultiVecDeviceDoubleComplex(double* y_res, int n, void* devMultiVecA);
int dotMultiVecDeviceFloat(float* y_res, int n, void* devVecA, void* devVecB);
int dotMultiVecDeviceDouble(double* y_res, int n, void* devVecA, void* devVecB);
int dotMultiVecDeviceFloatComplex(float complex* y_res, int n, void* devMultiVecA, void* devMultiVecB);
int dotMultiVecDeviceDoubleComplex(double complex* y_res, int n, void* devMultiVecA, void* devMultiVecB);
 


int axpbyMultiVecDeviceFloat(int n, float alpha, void* devVecX, float beta, void* devVecY);
int axpbyMultiVecDeviceDouble(int n, double alpha, void* devVecX, double beta, void* devVecY);
int axpbyMultiVecDeviceFloatComplex(int n, float complex alpha, void* devMultiVecX, 
				    float complex beta, void* devMultiVecY);
int axpbyMultiVecDeviceDoubleComplex(int n, double complex alpha, void* devMultiVecX, 
				     double complex beta, void* devMultiVecY);
int axyMultiVecDeviceFloat(int n, float alpha, void *deviceVecA, void *deviceVecB);
int axyMultiVecDeviceDouble(int n, double alpha, void *deviceVecA, void *deviceVecB);
int axyMultiVecDeviceFloatComplex(int n, float complex alpha, void *deviceVecA, void *deviceVecB);
int axyMultiVecDeviceDoubleComplex(int n, double complex alpha, void *deviceVecA, void *deviceVecB);
int axybzMultiVecDeviceFloat(int n, float alpha, void *deviceVecA, 
			     void *deviceVecB, float beta, void *deviceVecZ);
int axybzMultiVecDeviceDouble(int n, double alpha, void *deviceVecA,
			      void *deviceVecB, double beta, void *deviceVecZ);
int axybzMultiVecDeviceFloatComplex(int n, float complex alpha, void *deviceVecA,
				    void *deviceVecB, float complex beta, 
				    void *deviceVecZ);
int axybzMultiVecDeviceDoubleComplex(int n, double complex alpha, void *deviceVecA,
				     void *deviceVecB, double complex beta, 
				     void *deviceVecZ);
int iscatMultiVecDeviceFloat(void* deviceVec, int vectorId, int first, int n, void *indexes,
			     void* host_values, int indexBase, float beta);
int iscatMultiVecDeviceDouble(void* deviceVec, int vectorId, int first, int n, void *indexes,
			      void* host_values, int indexBase, double beta);
int iscatMultiVecDeviceFloatComplex(void* deviceVec, int vectorId, int first, int n, void *indexes,
				    void* host_values, int indexBase, float complex beta);
int iscatMultiVecDeviceDoubleComplex(void* deviceVec, int vectorId, int first, int n, void *indexes,
				     void* host_values, int indexBase, double complex beta);