test/src/vectordev_mod.F90


  interface iscatMultiVecDevice
    function iscatMultiVecDeviceFloat(deviceVec, vectorId, n, idx, hostVec, firstIndex, beta) &
	& result(res) bind(c,name='iscatMultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)      :: res
      type(c_ptr), value  :: deviceVec
      integer(c_int),value:: vectorId
      integer(c_int),value:: n
      integer(c_int)	  :: idx(*)
      real(c_float)       :: hostVec(*)
      integer(c_int),value:: firstIndex
      real(c_float),value :: beta
    end function iscatMultiVecDeviceFloat
    function iscatMultiVecDeviceDouble(deviceVec, vectorId, n, idx, hostVec, firstIndex, beta) &
	& result(res) bind(c,name='iscatMultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)      :: res
      type(c_ptr), value  :: deviceVec
      integer(c_int),value:: vectorId
      integer(c_int),value:: n
      integer(c_int)	  :: idx(*)
      real(c_double)      :: hostVec(*)
      integer(c_int),value:: firstIndex
      real(c_double),value:: beta
    end function iscatMultiVecDeviceDouble
    function iscatMultiVecDeviceFloatComplex(deviceVec, vectorId, n, idx, hostVec, firstIndex, beta) &
	& result(res) bind(c,name='iscatMultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)      :: res
      type(c_ptr), value  :: deviceVec
      integer(c_int),value:: vectorId
      integer(c_int),value:: n
      integer(c_int)	  :: idx(*)
      complex(c_float_complex)      :: hostVec(*)
      integer(c_int),value:: firstIndex
      complex(c_float_complex),value:: beta
    end function iscatMultiVecDeviceFloatComplex
    function iscatMultiVecDeviceDoubleComplex(deviceVec, vectorId, n, idx, hostVec, firstIndex, beta) &
	& result(res) bind(c,name='iscatMultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)                  :: res
      type(c_ptr), value              :: deviceVec
      integer(c_int),value            :: vectorId
      integer(c_int),value            :: n
      integer(c_int)	              :: idx(*)
      complex(c_double_complex)       :: hostVec(*)
      integer(c_int),value            :: firstIndex
      complex(c_double_complex),value :: beta
    end function iscatMultiVecDeviceDoubleComplex
  end interface iscatMultiVecDevice

    
  interface nrm2MultiVecDevice
    function nrm2MultiVecDeviceFloat(res,n,deviceVecA) &
         & result(val) bind(c,name='nrm2MultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_float)         :: res
      type(c_ptr), value    :: deviceVecA
    end function nrm2MultiVecDeviceFloat
    function nrm2MultiVecDeviceDouble(res,n,deviceVecA) &
         & result(val) bind(c,name='nrm2MultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_double)        :: res
      type(c_ptr), value    :: deviceVecA
    end function nrm2MultiVecDeviceDouble
  end interface nrm2MultiVecDevice
  
  interface nrm2MultiVecDeviceComplex
    function nrm2MultiVecDeviceFloatComplex(res,n,deviceVecA) &
         & result(val) bind(c,name='nrm2MultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_float)         :: res
      type(c_ptr), value    :: deviceVecA
    end function nrm2MultiVecDeviceFloatComplex
    function nrm2MultiVecDeviceDoubleComplex(res,n,deviceVecA) &
         & result(val) bind(c,name='nrm2MultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_double)        :: res
      type(c_ptr), value    :: deviceVecA
    end function nrm2MultiVecDeviceDoubleComplex
  end interface

  interface dotMultiVecDevice
    function dotMultiVecDeviceFloat(res, n,deviceVecA,deviceVecB) &
         & result(val) bind(c,name='dotMultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_float)         :: res
      type(c_ptr), value    :: deviceVecA, deviceVecB
    end function dotMultiVecDeviceFloat
    function dotMultiVecDeviceDouble(res,n,deviceVecA,deviceVecB) &
         & result(val) bind(c,name='dotMultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      real(c_double)        :: res
      type(c_ptr), value    :: deviceVecA, deviceVecB
    end function dotMultiVecDeviceDouble
    function dotMultiVecDeviceFloatComplex(res, n,deviceVecA,deviceVecB) &
         & result(val) bind(c,name='dotMultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      complex(c_float_complex) :: res
      type(c_ptr), value    :: deviceVecA, deviceVecB
    end function dotMultiVecDeviceFloatComplex
    function dotMultiVecDeviceDoubleComplex(res,n,deviceVecA,deviceVecB) &
         & result(val) bind(c,name='dotMultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)        :: val
      integer(c_int), value :: n
      complex(c_double_complex) :: res
      type(c_ptr), value    :: deviceVecA, deviceVecB
    end function dotMultiVecDeviceDoubleComplex
  end interface
  
  interface axpbyMultiVecDevice
    function axpbyMultiVecDeviceFloat(alpha,deviceVecA,beta,deviceVecB) &
         & result(res) bind(c,name='axpbyMultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)       :: res
      real(c_float), value :: alpha, beta
      type(c_ptr), value   :: deviceVecA, deviceVecB
    end function axpbyMultiVecDeviceFloat
    function axpbyMultiVecDeviceDouble(alpha,deviceVecA,beta,deviceVecB) &
         & result(res) bind(c,name='axpbyMultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)        :: res
      real(c_double), value :: alpha,beta
      type(c_ptr), value    :: deviceVecA, deviceVecB
    end function axpbyMultiVecDeviceDouble
    function axpbyMultiVecDeviceFloatComplex(alpha,deviceVecA,beta,deviceVecB) &
         & result(res) bind(c,name='axpbyMultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)      :: res
      complex(c_float_complex), value :: alpha, beta
      type(c_ptr), value  :: deviceVecA, deviceVecB
    end function axpbyMultiVecDeviceFloatComplex
    function axpbyMultiVecDeviceDoubleComplex(alpha,deviceVecA,beta,deviceVecB) &
         & result(res) bind(c,name='axpbyMultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)      :: res
      complex(c_double_complex), value :: alpha,beta
      type(c_ptr), value  :: deviceVecA, deviceVecB
    end function axpbyMultiVecDeviceDoubleComplex
  end interface axpbyMultiVecDevice

  interface axyMultiVecDevice
    function axyMultiVecDeviceFloat(alpha,deviceVecA,deviceVecB) &
         & result(res) bind(c,name='axyMultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)      :: res
      real(c_float)       :: alpha
      type(c_ptr), value  :: deviceVecA, deviceVecB
    end function axyMultiVecDeviceFloat
    function axyMultiVecDeviceDouble(alpha,deviceVecA,deviceVecB) &
         & result(res) bind(c,name='axyMultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)      :: res
      real(c_double)      :: alpha
      type(c_ptr), value  :: deviceVecA, deviceVecB
    end function axyMultiVecDeviceDouble
    function axyMultiVecDeviceFloatComplex(alpha,deviceVecA,deviceVecB) &
         & result(res) bind(c,name='axyMultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)           :: res
      complex(c_float_complex) :: alpha
      type(c_ptr), value       :: deviceVecA, deviceVecB
    end function axyMultiVecDeviceFloatComplex
    function axyMultiVecDeviceDoubleComplex(alpha,deviceVecA,deviceVecB) &
         & result(res) bind(c,name='axyMultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)            :: res
      complex(c_double_complex) :: alpha
      type(c_ptr), value        :: deviceVecA, deviceVecB
    end function axyMultiVecDeviceDoubleComplex
  end interface axyMultiVecDevice

  interface axybzMultiVecDevice
    function axybzMultiVecDeviceFloat(alpha,deviceVecA,deviceVecB,beta,deviceVecZ) &
         & result(res) bind(c,name='axybzMultiVecDeviceFloat')
      use iso_c_binding
      integer(c_int)      :: res
      real(c_float),value :: alpha, beta
      type(c_ptr), value  :: deviceVecA, deviceVecB,deviceVecZ
    end function axybzMultiVecDeviceFloat
    function axybzMultiVecDeviceDouble(alpha,deviceVecA,deviceVecB,beta,deviceVecZ) &
         & result(res) bind(c,name='axybzMultiVecDeviceDouble')
      use iso_c_binding
      integer(c_int)      :: res
      real(c_double),value:: alpha, beta
      type(c_ptr), value  :: deviceVecA, deviceVecB, deviceVecZ
    end function axybzMultiVecDeviceDouble
    function axybzMultiVecDeviceFloatComplex(alpha,deviceVecA,deviceVecB,beta,deviceVecZ) &
         & result(res) bind(c,name='axybzMultiVecDeviceFloatComplex')
      use iso_c_binding
      integer(c_int)                  :: res
      complex(c_float_complex), value :: alpha, beta
      type(c_ptr), value              :: deviceVecA, deviceVecB,deviceVecZ
    end function axybzMultiVecDeviceFloatComplex
    function axybzMultiVecDeviceDoubleComplex(alpha,deviceVecA,deviceVecB,beta,deviceVecZ) &
         & result(res) bind(c,name='axybzMultiVecDeviceDoubleComplex')
      use iso_c_binding
      integer(c_int)                   :: res
      complex(c_double_complex), value :: alpha, beta
      type(c_ptr), value               :: deviceVecA, deviceVecB, deviceVecZ
    end function axybzMultiVecDeviceDoubleComplex
  end interface axybzMultiVecDevice
  

  interface 
    function  getMultiVecDeviceSize(deviceVec) &
         & bind(c,name='getMultiVecDeviceSize') result(res)
      use iso_c_binding
      type(c_ptr), value  :: deviceVec
      integer(c_int)      :: res
    end function getMultiVecDeviceSize
  end interface

  interface 
    function  getMultiVecDeviceCount(deviceVec) &
         & bind(c,name='getMultiVecDeviceCount') result(res)
      use iso_c_binding
      type(c_ptr), value  :: deviceVec
      integer(c_int)      :: res
    end function getMultiVecDeviceCount
  end interface


#endif  


end module vectordev_mod
